# website

./: .env.example  404.html  CNAME  ai.html  index.html  knowledge-knox.html  mkdocs.yml  notes.html  projects.html  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  weekly-run.yml
docs/: ai.md  index.md  knowledge-knox.md  notes.md  projects.md
docs/reading-list/: already-read.md  to-read.md
docs/writing/: .authors.yml  index.md
docs/writing/book-notes/: Digital Minimalism.md  Quantitative Trading.md  index.md
docs/writing/posts/: analysing-every-yc-batch-ever.md  on-definite-optimism.md  pyzam.md
mkdocs-python/: README.md  notion-to-md.py
overrides/partials/: comments.html
python/: notiondb_to_md.py
reading-list/: already-read.html  to-read.html
search/: search_index.js  search_index.json
site/: 404.html  index.html  sitemap.xml
site/ai/: index.html
site/knowledge-knox/: index.html
site/notes/: index.html
site/projects/: index.html
site/reading-list/already-read/: index.html
site/reading-list/to-read/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
site/writing/: index.html
site/writing/2024/04/12/pyzam/: index.html
site/writing/archive/2024/: index.html
writing/: index.html
writing/2024/04/12/: pyzam.html
writing/2024/09/25/: on-definite-optimism.html
writing/2024/10/12/: analysing-every-y-combinator-batch-ever.html
writing/archive/: 2024.html
writing/category/: data-analysis.html  personal-growth.html  startups.html
